<resources>
    <string name="app_name">Roshambo</string>
    <string name="win">You WIN!</string>
    <string name="lose">You LOSE!</string>
    <string name="draw">DRAW!</string>
    <string name="rock_button_description">Rock Button</string>
    <string name="paper_button_description">Paper Button</string>
    <string name="scissors_button_description">Scissors Button</string>
    <string name="player_result_description">Player Result</string>
    <string name="computer_result_description">Computer Result</string>
    <string name="computer_rock">rock</string>
    <string name="computer_paper">paper</string>
    <string name="computer_scissors">scissors</string>
</resources>
